--- a/public/index.html
+++ b/public/index.html
@@ -150,11 +150,11 @@
         }
 
         .police-tape::before {
-            content: 'CRIME SCENE - DO NOT CROSS • МЕСТО ПРЕСТУПЛЕНИЯ - НЕ ПЕРЕСЕКАТЬ • ДОКАЗАТЕЛЬСТВА • EVIDENCE • ';
+            content: 'CRIME SCENE - DO NOT CROSS • МЕСТО ПРЕСТУПЛЕНИЯ - НЕ ПЕРЕСЕКАТЬ • ДОКАЗАТЕЛЬСТВА • EVIDENCE • CRIME SCENE - DO NOT CROSS • МЕСТО ПРЕСТУПЛЕНИЯ - НЕ ПЕРЕСЕКАТЬ • ДОКАЗАТЕЛЬСТВА • EVIDENCE • ';
             position: absolute;
             top: 8%;
-            left: -100%;
-            width: 200%;
+            left: 0;
+            width: 300%;
             height: 25px;
             background: repeating-linear-gradient(45deg,
                     #FFD700 0px,
@@ -166,22 +166,23 @@
             font-size: 10px;
             font-weight: bold;
             line-height: 25px;
-            text-align: center;
+            text-align: left;
             letter-spacing: 2px;
             transform: rotate(-5deg);
-            animation: tapeMove 25s linear infinite, tapeFlicker 3s ease-in-out infinite;
+            animation: tapeScroll 20s linear infinite;
             opacity: 0.8;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.3);
             border-top: 1px solid rgba(0, 0, 0, 0.2);
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            white-space: nowrap;
         }
 
         .police-tape::after {
-            content: 'EVIDENCE • УЛИКИ • INVESTIGATION • РАССЛЕДОВАНИЕ • ';
+            content: 'EVIDENCE • УЛИКИ • INVESTIGATION • РАССЛЕДОВАНИЕ • EVIDENCE • УЛИКИ • INVESTIGATION • РАССЛЕДОВАНИЕ • ';
             position: absolute;
             bottom: 12%;
-            right: -100%;
-            width: 200%;
+            right: 0;
+            width: 300%;
             height: 20px;
             background: repeating-linear-gradient(-45deg,
                     #DC143C 0px,
@@ -193,45 +194,22 @@
             font-size: 8px;
             font-weight: bold;
             line-height: 20px;
-            text-align: center;
+            text-align: left;
             letter-spacing: 1px;
             transform: rotate(3deg);
-            animation: tapeMove 30s linear infinite reverse;
+            animation: tapeScroll 25s linear infinite reverse;
             opacity: 0.7;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+            white-space: nowrap;
         }
 
-        @keyframes tapeMove {
+        @keyframes tapeScroll {
             0% {
-                left: -100%;
-                opacity: 0.6;
-            }
-
-            10% {
-                opacity: 0.8;
-            }
-
-            90% {
-                opacity: 0.8;
+                transform: translateX(0) rotate(-5deg);
             }
 
             100% {
-                left: 100%;
-                opacity: 0.6;
-            }
-        }
-
-        @keyframes tapeFlicker {
-
-            0%,
-            100% {
-                opacity: 0.8;
-                filter: brightness(1);
-            }
-
-            50% {
-                opacity: 0.9;
-                filter: brightness(1.1);
+                transform: translateX(-33.33%) rotate(-5deg);
             }
         }
 
@@ -1071,13 +1049,13 @@
                         <path
                             d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z" />
                     </svg>
-                    <h2 class="card-title">Дело об убийстве</h2>
+                    <h2 class="card-title">Криминалистическое расследование</h2>
                 </div>
                 <p class="card-description">
-                    Погрузись в мир жестоких преступлений.
-                    Анализируй улики на местах преступлений,
-                    выявляй роковые ошибки убийц. 5 кровавых
-                    дел ждёт твоего расследования.
+                    Анализируй реальные методы криминалистики.
+                    Выявляй ключевые ошибки преступников, которые
+                    привели к их поимке. 5 дел с возрастающей сложностью
+                    проверят твои детективные навыки.
                 </p>
             </div>
 
@@ -1086,15 +1064,14 @@
                 <div class="card-header">
                     <svg class="card-icon" viewBox="0 0 24 24" fill="currentColor">
                         <path
-                            d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,17H13V11H11V17M11,9H13V7H11V9Z" />
+                            d="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z" />
                     </svg>
-                    <h2 class="card-title">Уровни жестокости</h2>
+                    <h2 class="card-title">Система подсчёта очков</h2>
                 </div>
                 <p class="card-description">
-                    От случайных убийств до изощренных
-                    серийных преступлений. Время истекает - у
-                    тебя 15 секунд, чтобы найти ключевую улику
-                    до того, как след простынет.
+                    Базовые очки за правильность + бонус за скорость решения.
+                    Быстрый ответ (0-15 сек) = +50% очков.
+                    Эксперт-уровень дает до 150 очков за дело!
                 </p>
             </div>
         </div>
@@ -1104,28 +1081,27 @@
             <div class="stat-card">
                 <svg class="stat-icon" viewBox="0 0 24 24" fill="currentColor">
                     <path
-                        d="M12,20A8,8 0 0,1 20,12A8,8 0 0,1 12,4A8,8 0 0,1 4,12A8,8 0 0,1 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z" />
+                        d="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z" />
                 </svg>
-                <div class="stat-value">15</div>
+                <div class="stat-value">60</div>
                 <div class="stat-label">Секунд</div>
             </div>
 
             <div class="stat-card">
                 <svg class="stat-icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M12,2C13.1,2 14,2.9 14,4C14,5.1 13.1,6 12,6C10.9,6 10,5.1 10,4C10,2.9 10.9,2 12,2M21,9V7L15,1H5C3.89,1 3,1.89 3,3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V9M19,19H5V19L5,3H14L19,8V19Z" />
+                    <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z" />
                 </svg>
                 <div class="stat-value">5</div>
-                <div class="stat-label">Жертв</div>
+                <div class="stat-label">Дел</div>
             </div>
 
             <div class="stat-card">
                 <svg class="stat-icon" viewBox="0 0 24 24" fill="currentColor">
                     <path
-                        d="M17.81,4.47C17.73,4.47 17.65,4.45 17.58,4.41C17.5,4.38 17.42,4.34 17.35,4.29L15.83,3.03C15.69,2.92 15.6,2.76 15.58,2.58C15.56,2.4 15.61,2.22 15.72,2.08L16.76,0.83C16.81,0.78 16.86,0.73 16.92,0.69C17,0.64 17.08,0.61 17.16,0.59C17.24,0.56 17.33,0.56 17.41,0.57C17.5,0.58 17.58,0.6 17.66,0.64L19.36,1.78C19.5,1.89 19.59,2.05 19.61,2.23C19.63,2.41 19.58,2.59 19.47,2.73L18.43,3.98C18.38,4.03 18.33,4.08 18.27,4.12C18.19,4.17 18.11,4.2 18.03,4.22C17.95,4.25 17.86,4.25 17.78,4.24C17.7,4.23 17.62,4.21 17.54,4.17L17.81,4.47M10.25,13.75C10.18,13.75 10.11,13.73 10.05,13.7C9.98,13.67 9.91,13.63 9.85,13.58L8.85,12.73C8.73,12.64 8.65,12.5 8.63,12.34C8.61,12.18 8.65,12.02 8.74,11.89L9.47,10.83C9.5,10.79 9.54,10.75 9.58,10.72C9.64,10.68 9.7,10.65 9.77,10.63C9.83,10.61 9.9,10.6 9.97,10.6C10.04,10.6 10.11,10.61 10.17,10.63L11.26,11.07C11.37,11.11 11.46,11.19 11.52,11.29C11.58,11.39 11.61,11.5 11.61,11.62C11.61,11.74 11.58,11.85 11.52,11.95L10.92,12.78C10.89,12.82 10.85,12.86 10.81,12.89C10.75,12.93 10.69,12.96 10.62,12.98C10.56,13 10.49,13.01 10.42,13.01C10.35,13.01 10.28,13 10.22,12.98L10.25,13.75Z" />
+                        d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22H9M6,12V14H18V12H6M6,9V11H18V9H6M6,6V8H18V6H6Z" />
                 </svg>
-                <div class="stat-value">∞</div>
-                <div class="stat-label">Приговор</div>
+                <div class="stat-value">3</div>
+                <div class="stat-label">Варианта</div>
             </div>
 
             <div class="stat-card">
@@ -1133,8 +1109,8 @@
                     <path
                         d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" />
                 </svg>
-                <div class="stat-value">★</div>
-                <div class="stat-label">Профиль</div>
+                <div class="stat-value">8</div>
+                <div class="stat-label">Рангов</div>
             </div>
         </div>
 
