--- a/public/index.html
+++ b/public/index.html
@@ -1148,7 +1148,7 @@
             line-height: 1.3;
         }
 
-        /* Детективные методы */
+        /* Система рангов и прогрессии */
         .detective-methods {
             background: rgba(26, 26, 26, 0.8);
             border: 1px solid var(--blood-red);
@@ -1295,8 +1295,8 @@
                 <span class="quick-stat-label">секунд на дело</span>
             </div>
             <div class="quick-stat">
-                <span class="quick-stat-value">5</span>
-                <span class="quick-stat-label">дел за игру</span>
+                <span class="quick-stat-value">1000+</span>
+                <span class="quick-stat-label">криминальных историй</span>
             </div>
             <div class="quick-stat">
                 <span class="quick-stat-value">3</span>
@@ -1307,7 +1307,7 @@
         <!-- Информационные карточки (обновленные) -->
         <div class="info-cards">
             <div class="info-card">
-                <div class="card-label">Evidence #001</div>
+                <div class="card-label">Досье №001</div>
                 <div class="card-header">
                     <svg class="card-icon" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12,2L13.09,8.26L20,9L13.09,9.74L12,16L10.91,9.74L4,9L10.91,8.26L12,2Z" />
@@ -1318,12 +1318,12 @@
                     <strong>Ограбления</strong> - кражи со взломом, угоны<br>
                     <strong>Мошенничество</strong> - финансовые преступления<br>
                     <strong>Убийства</strong> - дела об отравлениях<br>
-                    <strong>Прочие</strong> - разнообразные криминальные случаи
+                    <strong>Более 1000+</strong> реальных криминальных историй
                 </p>
             </div>
 
             <div class="info-card">
-                <div class="card-label">Evidence #002</div>
+                <div class="card-label">Протокол №002</div>
                 <div class="card-header">
                     <svg class="card-icon" viewBox="0 0 24 24" fill="currentColor">
                         <path
@@ -1338,6 +1338,23 @@
                     Максимум <strong>150 очков</strong> за сложное дело!
                 </p>
             </div>
+
+            <div class="info-card">
+                <div class="card-label">Справка №003</div>
+                <div class="card-header">
+                    <svg class="card-icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22H9M6,12V14H18V12H6M6,9V11H18V9H6M6,6V8H18V6H6Z" />
+                    </svg>
+                    <h2 class="card-title">Игровая механика</h2>
+                </div>
+                <p class="card-description">
+                    Анализируй улики, находи ошибки преступников.<br>
+                    <strong>Haptic feedback</strong> для лучшего погружения<br>
+                    <strong>Реальные методы</strong> криминалистики<br>
+                    Развивай <strong>логическое мышление</strong> детектива
+                </p>
+            </div>
         </div>
 
         <!-- Мини-блоки с дополнительной информацией -->
@@ -1350,7 +1367,7 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">8 детективных рангов</div>
+                    <div class="mini-title">6 детективных рангов</div>
                     <div class="mini-desc">От Новичка до Криминалиста</div>
                 </div>
             </div>
@@ -1363,8 +1380,8 @@
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">20+ достижений</div>
-                    <div class="mini-desc">Спидстер, Перфекционист, Ветеран</div>
+                    <div class="mini-title">Достижения за мастерство</div>
+                    <div class="mini-desc">Перфекционист, Спидстер, Ветеран</div>
                 </div>
             </div>
 
@@ -1372,12 +1389,12 @@
                 <div class="mini-icon">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
-                            d="M3,3H21V5H19V4H5V20H19V19H21V21H3V3M9,8V6H11V8H9M9,13V11H11V13H9M9,18V16H11V18H9M15,8V6H17V8H15M15,13V11H17V13H15M15,18V16H17V18H15Z" />
+                            d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.46,13.97L5.82,21L12,17.27Z" />
                     </svg>
                 </div>
                 <div class="mini-content">
-                    <div class="mini-title">Репутационная система</div>
-                    <div class="mini-desc">Точность, скорость, постоянство</div>
+                    <div class="mini-title">Система статистики</div>
+                    <div class="mini-desc">Точность, серии, раскрытые дела</div>
                 </div>
             </div>
 
@@ -1389,36 +1406,36 @@
                 </div>
                 <div class="mini-content">
                     <div class="mini-title">3 уровня сложности</div>
-                    <div class="mini-desc">Легкий, Средний, Эксперт</div>
+                    <div class="mini-desc">Легкий, Средний, Сложный</div>
                 </div>
             </div>
         </div>
 
-        <!-- Статистики детективных методов -->
+        <!-- Система рангов и прогрессии -->
         <div class="detective-methods">
             <div class="methods-header">
                 <svg viewBox="0 0 24 24" fill="currentColor">
                     <path
-                        d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                        d="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,13 12,19.71 12,19.71C12,19.71 17,13 17,9A5,5 0 0,0 12,4Z" />
                 </svg>
-                <h3>Криминалистические методы</h3>
+                <h3>Детективные ранги и прогрессия</h3>
             </div>
             <div class="methods-grid">
                 <div class="method-item">
-                    <div class="method-icon">🧬</div>
-                    <div class="method-name">ДНК-анализ</div>
+                    <div class="method-icon">🔰</div>
+                    <div class="method-name">Новичок (0-299)</div>
                 </div>
                 <div class="method-item">
-                    <div class="method-icon">👁</div>
-                    <div class="method-name">Видеонаблюдение</div>
+                    <div class="method-icon">🕵️</div>
+                    <div class="method-name">Детектив (300-799)</div>
                 </div>
                 <div class="method-item">
-                    <div class="method-icon">📱</div>
-                    <div class="method-name">Цифровые следы</div>
+                    <div class="method-icon">👮</div>
+                    <div class="method-name">Инспектор (800-1999)</div>
                 </div>
                 <div class="method-item">
-                    <div class="method-icon">🔍</div>
-                    <div class="method-name">Отпечатки</div>
+                    <div class="method-icon">🏆</div>
+                    <div class="method-name">Криминалист (10000+)</div>
                 </div>
             </div>
         </div>
