feat: Унификация и улучшение системы начисления очков - выполнены все 4 рекомендации: унификация версий, обновление документации, валидация времени, улучшенная прогрессивная формула с perfectionBonus. Максимум очков увеличен до 250

--- a/public/index.html
+++ b/public/index.html
@@ -1332,10 +1332,11 @@
                     <h2 class="card-title">Система очков и бонусов</h2>
                 </div>
                 <p class="card-description">
-                    <strong>Быстрый ответ (0-15 сек)</strong> → +50% очков<br>
-                    <strong>Средний ответ (16-30 сек)</strong> → +30% очков<br>
-                    <strong>Медленный ответ (31-45 сек)</strong> → +10% очков<br>
-                    Максимум <strong>150 очков</strong> за сложное дело!
+                    <strong>Базовые очки:</strong> 100 за правильный ответ<br>
+                    <strong>Бонус скорости:</strong> до +75 очков (прогрессивно)<br>
+                    <strong>Бонус сложности:</strong> medium +25, hard +50<br>
+                    <strong>Бонус совершенства:</strong> до +25 очков<br>
+                    Максимум <strong>250 очков</strong> за идеальное дело!
                 </p>
             </div>
 
